# abstract-machine-zoo

./: .gitignore  README.md  abstract-machine-zoo.cabal  default.nix  flake.nix  shell.nix
CEK/: Machine.hs
CombinatorGMachine/: Combinator.hs  Machine.hs  Main.hs
CombinatorGMachine/Compiler/: LC.hs
CombinatorGraphReduction/: Combinator.hs  Machine.hs
GraphReduction/: Main.hs
Language/: IMP.hs  LC.hs  OP.hs
StackMachine/: Machine.hs  Main.hs
StackMachine/Compiler/: IMP.hs
data/imp/: arith.imp  blocks.imp  func.imp  func1.imp  func2.imp  ifelse.imp  loop.imp  seq.imp  unary.imp
data/lc/: arith.lc  closure.lc  fact.lc  fold.lc  func.lc  if.lc  io.lc  let.lc  list.lc  match.lc  nested.lc  rec.lc
executables/CombinatorGMachine/: Combinator.hs  Machine.hs  Main.hs
executables/CombinatorGraphReduction/: Machine.hs
executables/CombinatorGraphReduction/Compiler/: LC.hs
executables/Interpreter/: Main.hs
executables/Interpreter/Desugar/: LC.hs
executables/Interpreter/EvalApply/: LC.hs
executables/Interpreter/PushEnter/: LC.hs
executables/Krivine/: Machine.hs
executables/StackMachine/: Machine.hs  Main.hs
syntax/: IMP.hs
