cabal-version:      3.0
name:               abstract-machine-zoo
version:            0.1.0.0
license:            MIT
author:             Ailrk
maintainer:         jimmy123good@gmail.com
build-type:         Simple

common shared-settings
  ghc-options:       -Wall
  default-language:  Haskell2010
  default-extensions:
    BlockArguments
    StrictData
    OverloadedStrings
  build-depends:
    base ^>=4.18.2.1,
    containers,
    mtl,
    vector,
    text,
    sequence,
    unordered-containers,
    megaparsec,
    parser-combinators,
    deepseq,
    pretty-simple

common shared-executable-settings
  build-depends:
    language

library language
  import:            shared-settings
  hs-source-dirs:    Language
  exposed-modules:
    LC
    IMP

executable cek
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    CEK
  other-modules:
    Machine

executable secd
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    SECD
  other-modules:
    Machine

executable combinator-gmachine
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    CombinatorGMachine
  other-modules:
    Machine
    Combinator
    Compiler.LC


executable krivine
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    Krivine
  other-modules:
    Machine


executable turing-machine
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    TuringMachine
  other-modules:
    Machine

executable register-machine
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    RegisterMachine
  other-modules:
    Machine

executable stack-machine
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    StackMachine
  other-modules:
    Machine
    Compiler.IMP

executable TAC
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    TAC
  other-modules:
    Machine

executable STG
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    STG
  other-modules:
    Machine
