cabal-version:      3.0
name:               abstract-machine-zoo
version:            0.1.0.0
license:            MIT
author:             Ailrk
maintainer:         jimmy123good@gmail.com
build-type:         Simple

common shared-settings
  ghc-options: -Wall
  ghc-options: -rtsopts -with-rtsopts=-N
  ghc-options: -threaded


  default-language:  Haskell2010
  default-extensions:
    BlockArguments
    StrictData
    OverloadedStrings
  build-depends:
    base ^>=4.18.2.1,
    containers,
    mtl,
    vector,
    text,
    sequence,
    unordered-containers,
    megaparsec,
    parser-combinators,
    deepseq,
    pretty-simple

common shared-executable-settings
  build-depends:
    syntax

library syntax
  import:            shared-settings
  hs-source-dirs:    syntax
  exposed-modules:
    LC
    IMP
    OP

executable interpreter
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/Interpreter
  other-modules:
    Desugar.LC
    EvalApply.LC
    PushEnter.LC

executable cek
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/CEK
  other-modules:
    Machine

executable secd
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/SECD
  other-modules:
    Machine

executable combinator-graph-reduction
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/CombinatorGraphReduction
  other-modules:
    Machine
    Combinator
    Compiler.LC

executable combinator-gmachine
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/CombinatorGMachine
  other-modules:
    Machine
    Combinator
    Compiler.LC

executable krivine
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/Krivine
  other-modules:
    Machine

executable turing-machine
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/TuringMachine
  other-modules:
    Machine

executable register-machine
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/RegisterMachine
  other-modules:
    Machine

executable stack-machine
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/StackMachine
  other-modules:
    Machine
    Compiler.IMP

executable TAC
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/TAC
  other-modules:
    Machine

executable STG
  import:            shared-settings, shared-executable-settings
  main-is:           Main.hs
  hs-source-dirs:    executables/STG
  other-modules:
    Machine
